--- a/main/webpage/index.html
+++ b/main/webpage/index.html
@@ -1,32 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<script src='jquery-3.3.1.min.js'></script>
-		<link rel="stylesheet" href="app.css">
-		<script async src="app.js"></script>
-		<title>ESP32 Udemy Course</title>
-	</head>
-	<body>
-	<header>
-		<h1>ESP32 Application Development</h1>
-	</header>
-		
-	<div id="OTA">
-	<h2>ESP32 Firmware Update</h2>
-		<label id="latest_firmware_label">Latest Firmware: </label>
-		<div id="latest_firmware"></div> 
-		<input type="file" id="selected_file" accept=".bin" style="display: none;" onchange="getFileInfo()" />
-		<div class="buttons">
-			<input type="button" value="Select File" onclick="document.getElementById('selected_file').click();" />
-			<input type="button" value="Update Firmware" onclick="updateFirmware()" />
-		</div>
-		<h4 id="file_info"></h4>	
-		<h4 id="ota_update_status"></h4>
-	</div>
-	<hr>
-		
-	</body>
-<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, user-scalable=no"
+    />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <script src="jquery-3.3.1.min.js"></script>
+    <link rel="stylesheet" href="app.css" />
+    <script async src="app.js"></script>
+    <title>ESP32 Udemy Course</title>
+  </head>
+  <body>
+    <header>
+      <h1>ESP32 Application Development</h1>
+    </header>
+
+    <div id="OTA">
+      <h2>ESP32 Firmware Update</h2>
+      <label id="latest_firmware_label">Latest Firmware: </label>
+      <div id="latest_firmware"></div>
+      <input
+        type="file"
+        id="selected_file"
+        accept=".bin"
+        style="display: none"
+        onchange="getFileInfo()"
+      />
+      <div class="buttons">
+        <input
+          type="button"
+          value="Select File"
+          onclick="document.getElementById('selected_file').click();"
+        />
+        <input
+          type="button"
+          value="Update Firmware"
+          onclick="updateFirmware()"
+        />
+      </div>
+      <h4 id="file_info"></h4>
+      <h4 id="ota_update_status"></h4>
+    </div>
+    <hr />
+
+    <div id="DHT11Sensor">
+      <h2>DHT11 Temperature and Humidity Sensor</h2>
+      <label for="temperature_reading">Temperature: </label>
+      <div id="temperature_reading"></div>
+      <label for="humidity_reading">Humidity: </label>
+      <div id="humidity_reading"></div>
+    </div>
+    <hr />
+
+    <div id="WiFiConnect">
+      <h2>ESP32 WiFi Connection</h2>
+      <section>
+        <input
+          id="connect_ssid"
+          type="text"
+          maxlength="32"
+          placeholder="SSID"
+        />
+        <input
+          id="connect_pass"
+          type="password"
+          maxlength="64"
+          placeholder="Password"
+        />
+        <input type="checkbox" onclick="showPassword()" id="show_password" />
+        <label for="show_password">Show Password</label>
+      </section>
+
+      <div class="buttons">
+        <input
+          type="button"
+          id="connect_wifi"
+          value="Connect"
+          onclick="connectToWiFi()"
+        />
+
+        <input
+          type="button"
+          id="disconnect_wifi"
+          value="Disconnect"
+          onclick="disconnectFromWiFi()"
+        />
+      </div>
+
+      <div id="wifi_connect_credentials_errors" class="error"></div>
+      <h4 id="wifi_connect_status"></h4>
+    </div>
+  </body>
+  <html></html>
+</html>
